src/objects/Ter_Vehiculo__c.object
<CustomObject>
    <description>Este objeto contiene los registros de los vehículos asociados al cliente del negocio GNV conversiones.</description>
    <fields>
        <fullName>Ter_Clliente__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Este campo corresponde a la unión entre el cliente y el vehículo.</description>
        <label>Cliente</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vehículos</relationshipLabel>
        <relationshipName>Vehiculos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ter_Combustible__c</fullName>
        <description>Este campo contiene el combustible que aplica para el vehículo.</description>
        <label>Combustible</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Corriente</fullName>
                </value>
                <value>
                    <fullName>Extra</fullName>
                </value>
                <value>
                    <fullName>ACPM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ter_Placa__c</fullName>
        <description>Este campo contiene el número de placa del vehículo.</description>
        <label>Placa</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <label>Vehículo</label>
    <nameField>
        <displayFormat>VEH-{000000}-{YYYY}-{MM}-{DD}</displayFormat>
        <label>Vehiculo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehículos</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>